# Dexnet_Minsoo

./: .gitignore  README.md  checklist.md  dataset_and_learning.sh  gripper_config.yaml  learning.sh  nohup.out  polar_coordinate.py  pyproject.toml  requirement.txt  run_learning.sh  setup.py  test copy.py  test.py  test_hdf5.py  trimesh_practice.py
Minsoo_net/: setup.py
Minsoo_net.egg-info/: PKG-INFO  SOURCES.txt
Minsoo_net/config/: master_config.yaml  online_config.yaml  random_variables.yaml
Minsoo_net/data/: PBLSN3.stl
Minsoo_net/database/: __init__.py  dataset_generation_multy_objects.py  dataset_generation_single_object.py  hdf5_factory.py  keys.py
Minsoo_net/grasp/: Object.py  __init__.py  collision_checker.py  contact.py  depth_noise.py  grasp.py  grasp_sampler.py  gripper.py  pipeline.py  quality.py  random_variables.py  rendering.py  robust_quality.py  sampling_example.py  visualize.py
Minsoo_net/model/: focal_loss.py  model.py  train.py
Minsoo_net/my_grasp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Minsoo_net/online/: deapth_image.py  depth_image.py  hsv_tuner.py  image_example.py  online_camera.py  online_pipeline.py  online_sampler.py  practice_canny.py  roi_predict.py  sampler_example.py  visualize.py
Minsoo_net/test/: hdf5_test.py  rendering_parameter_decide.py  stl_converter.py  test.py  test_collision_checker.py  test_copy.py  test_dataset.py  test_generate_dataset.py  trimesh_practice.py
ROS_NODES/: package.xml  setup.cfg  setup.py
pytorch_study/: activation_function.py  pytorch_jupyter.ipynb
test/: test copy.py
(+18305 files in other folders)
